--- a/src/main/resources/static/styleSheets/hello.html
+++ b/src/main/resources/static/styleSheets/hello.html
@@ -30,7 +30,7 @@
                 <button id="next-button" onclick="goNext()">NEXT</button>
             </nav>
             <!-- <div id="sub-button-container"> -->
-                <button class="main-display" id="submit-button" onclick="submit()">SUBMIT</button>
+                <button class="main-display submit-button" id="submit-button" onclick="submit()">SUBMIT</button>
                 <p style="display: none" id="error-message">cannot submit until all questions answered</p>
             <!-- </div>  -->
             <section id="score-display">
