updated docker and static

--- a/src/main/resources/static/quizApp.html
+++ b/src/main/resources/static/quizApp.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="vireport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="quizApp.css">
+        <link rel="stylesheet" href="./styleSheets/quizApp.css">
         <script src="./javascript/quizLogic.js" defer></script>
         <title>Document</title>
     </head>
