updated confirm pop-up

--- a/src/main/resources/static/quizApp.html
+++ b/src/main/resources/static/quizApp.html
@@ -34,7 +34,7 @@
                 <p style="display: none" id="error-message">cannot submit until all questions answered</p>
             <!-- </div>  -->
             <section id="score-display">
-                <p id="score"></p>
+                <h2 id="score"></h2>
                 <div id="correct-container" class="correct-container">
                 </div>
                 <button style="display: none;" id="play-again-button">Play Again</button>
